[project]
name = "qiling"
version = "1.4.5-dev"
description = "Qiling is an advanced binary emulation framework that cross-platform-architecture"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0-only"}
maintainers = [
  {name = "KaiJern Lau (xwings)", email = "info@qiling.io"}
]
keywords = ["qiling", "binary", "emulator", "framework", "malware", "analysis", "UEFI", "IoT"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "capstone>=4.0.1",
  "unicorn>=2.0.0",
  "pefile>=2022.5.30",
  "python-registry>=1.3.1",
  "keystone-engine>=0.9.2",
  "pyelftools>=0.28",
  "gevent>=20.9.0",
  "multiprocess>=0.70.12.2",
  "windows-curses>=2.1.0;platform_system=='Windows'",
  "pyyaml>=6.0",
  "python-fx",
  "questionary",
  "termcolor"
]

[project.optional-dependencies]
evm = [
  "blake2b-py>=0.1.2",
  "cached-property>=1.5.2;python_version<'3.8'",
  "typing-extensions>=3.7.4.3;python_version<'3.8'",
  "eth-keys>=0.2.1",
  "eth-typing>=2.2.0",
  "eth-utils>=1.9.4",
  "eth_abi>=2.1.1",
  "lru-dict>=1.1.6",
  "py-ecc>=1.4.7",
  "rlp>=2",
  "trie==2.0.0-alpha.5",
  "eth-hash[pycryptodome]",
  "numpy",
  "rich",
  "cmd2"
]
fuzz = [
  "unicornafl>=2.0.0;platform_system!='Windows'",
  "fuzzercorn>=0.0.1;platform_system=='Linux'"
]
RE = [
  "r2libr>=5.7.4"
]

[project.urls]
homepage = "https://qiling.io"
documentation = "https://docs.qiling.io"
repository = "https://github.com/qilingframework/qiling"
changelog = "https://github.com/qilingframework/qiling/blob/master/ChangeLog"

[project.scripts]
qltool = "qltool:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
qiling = ["profiles/*.ql"]
"qiling.debugger.gdb" = ["xml/*/*"]
"qiling.os.uefi" = ["guids.csv"]
"qiling.arch.evm.analysis" = ["signatures.json"]

