[metadata]
name = qiling
version = 1.2.0-dev
url = https://qiling.io/
project_urls =
    Documentation = https://docs.qiling.io
	Repository = https://github.com/qilingframework/qiling
	Changelog = https://github.com/qilingframework/qiling/blob/master/ChangeLog
maintainer = KaiJern Lau (xwings)
maintainer_email = info@qiling.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
license = GPLv2
license_file = COPYING
description = Qiling is an advanced binary emulation framework that cross-platform-architecture
long_description = file: README.md
long_description_content_type = text/markdown
keywords=
    qiling
    binary
    emulator
    framework
    malware
    analysis
    UEFI
    IoT
platforms = any

[options]
packages = find:
install_requires =
    capstone>=4.0.1
    unicorn==2.0.0-rc5
    pefile>=2021.9.3
    python-registry>=1.3.1
    keystone-engine>=0.9.2
    pyelftools>=0.26
    gevent>=20.9.0
    multiprocess>=0.70.12.2
    pyyaml>=6.0
    windows-curses>=2.1.0; platform_system == 'Windows'
python_requires = >=3.8
scripts =
    qltool
include_package_data = True

[options.extras_require]
evm =
    blake2b-py>=0.1.2
    cached-property>=1.5.2; python_version < '3.8'
    typing-extensions>=3.7.4.3; python_version < '3.8'
    eth-keys>=0.2.1
    eth-typing>=2.2.0
    eth-utils>=1.9.4
    eth_abi>=2.1.1
    lru-dict>=1.1.6
    py-ecc>=1.4.7
    rlp>=2
    trie==2.0.0-alpha.5
    eth-hash[pycryptodome]
    numpy
    rich
    cmd2
fuzz =
    aflunicorn>=2.0.0; platform_system != 'Windows'
    fuzzercorn>=0.0.1; platform_system == 'Linux'
